--- a/nuveAPI/views/test.ejs
+++ b/nuveAPI/views/test.ejs
@@ -45,7 +45,7 @@ var body;
 function setParams() {
 
     method = '';
-    url = 'http://toronado.dit.upm.es:3000/';
+    url = 'http://chotis2.dit.upm.es:3000/';
     body = {};
 
     if (document.getElementById('createRoom').checked) {
