I changed the first post and added support to feedburner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
   <![endif]-->
 
   {% if site.feedburner %}
-  <!-- link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
+  <link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
   {% endif %}
 
   {% if site.google_analytics %}
