First version of the Roadmap
I added the new first version of the Roadmap page. It needs to be
checked and tested, because here I don't have installed jekyll.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,6 +107,9 @@
               <li {% if page.serverapi %}class="active"{% endif %}>
                 <a href="./server-api.html">Server API</a>
               </li>
+              <li {% if page.roadmap %}class="active"{% endif %}>
+                <a href="./roadmap.html">Roadmap</a>
+              </li>
               <li {% if page.try %}class="active"{% endif %}>
                 <a href="./try.html">Try it!</a>
               </li>
