I added new Christmas logo and I changed the Nav Bar

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -853,6 +853,10 @@ form.bs-docs-example {
   width: 14px;
 }
 
+.navbar .nav > li > .dropdown-menu:after {
+  display: none;
+}
+
 
 
 /* Responsive
@@ -1045,3 +1049,5 @@ form.bs-docs-example {
     float: none;
   }
 }
+
+
