--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/docs.css" rel="stylesheet">
     <link href="assets/css/prettify.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -66,19 +67,24 @@
   <body data-spy="scroll" data-target=".bs-docs-sidebar" data-twttr-rendered="true">
 
 
-    <a href="https://github.com/ging/lynckia"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1031" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/ging/lynckia" class="visible-desktop"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1031" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
 
     <!-- Navbar
     ================================================== -->
+    
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
+
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+
+          <a href="https://github.com/ging/lynckia" class="hidden-desktop" style="float: right; margin-top: 4px"><img style="width:36px; height: 34px;" src="assets/img/github-logo.png"></a>
+
           <a class="brand" href="./index.html">Lynckia</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
@@ -92,21 +98,30 @@
               <li {% if page.community %}class="active"{% endif %}>
                 <a href="./community.html">Community</a>
               </li>
-              <li {% if page.gettingstarted %}class="active"{% endif %}>
-                <a href="./getting-started.html">Get started</a>
-              </li>
+              
               <li {% if page.install %}class="active"{% endif %}>
                 <a href="./install.html">Installation</a>
               </li>
-              <li {% if page.architecture %}class="active"{% endif %}>
-                <a href="./architecture.html">Architecture</a>
+
+              <li class="dropdown {% if page.gettingstarted or page.architecture or page.clientapi or page.serverapi %} active {% endif %}">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li {% if page.gettingstarted %}class="active"{% endif %}>
+                    <a href="./getting-started.html">Get started</a>
+                  </li>
+                  <li {% if page.architecture %}class="active"{% endif %}>
+                    <a href="./architecture.html">Architecture</a>
+                  </li>
+                  <li {% if page.clientapi %}class="active"{% endif %}>
+                    <a href="./client-api.html">Client API</a>
+                  </li>
+                  <li {% if page.serverapi %}class="active"{% endif %}>
+                    <a href="./server-api.html">Server API</a>
+                  </li>
+                </ul>
               </li>
-              <li {% if page.clientapi %}class="active"{% endif %}>
-                <a href="./client-api.html">Client API</a>
-              </li>
-              <li {% if page.serverapi %}class="active"{% endif %}>
-                <a href="./server-api.html">Server API</a>
-              </li>
+
+              
               <li {% if page.roadmap %}class="active"{% endif %}>
                 <a href="./roadmap.html">Roadmap</a>
               </li>
