Added API documentation about Stream.close() function

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <ul class="footer-links">
       <li><a href="http://lynckia.com/blog.html">Read the blog</a></li>
       <li><a href="https://plus.google.com/u/0/117182047221528167166">Follow us in Google+</a></li>
-      <li><a href="https://plus.google.com/u/0/117182047221528167166">Contact us</a></li>
+      <li><a href="mailto:contact@lynckia.com">Contact us</a></li>
     </ul>
   </div>
 </footer>
