--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,14 @@
     <meta name="author" content="Lynckia">
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="http://fortawesome.github.com/Font-Awesome/assets/css/site.css">
+    
+    <!--<link rel="stylesheet" href="http://fortawesome.github.com/Font-Awesome/assets/css/site.css">-->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/docs.css" rel="stylesheet">
     <link href="assets/css/prettify.css" rel="stylesheet">
-    <link href="assets/css/christmas.css" rel="stylesheet"> 
+    
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
