--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
   <body data-spy="scroll" data-target=".bs-docs-sidebar" data-twttr-rendered="true">
 
 
-    <a href="https://github.com/ging/lynckia" class="visible-desktop"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1031" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/ging/licode" class="visible-desktop"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1031" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
 
     <!-- Navbar
@@ -86,7 +86,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a href="https://github.com/ging/lynckia" class="hidden-desktop" style="float: right; margin-top: 4px"><img style="width:36px; height: 34px;" src="assets/img/github-logo.png"></a>
+          <a href="https://github.com/ging/licode" class="hidden-desktop" style="float: right; margin-top: 4px"><img style="width:36px; height: 34px;" src="assets/img/github-logo.png"></a>
 
           <a class="brand" href="./index.html">Licode</a>
           <div class="nav-collapse collapse">
