Updated demo portls

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,7 +126,7 @@
                 <a href="./roadmap.html">Roadmap</a>
               </li>
               <li {% if page.try %}class="active"{% endif %}>
-                <a href="./try.html">Try it!</a>
+                <a href="http://chotis2.dit.upm.es">Try it!</a>
               </li>
             </ul>
           </div>
