--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/docs.css" rel="stylesheet">
     <link href="assets/css/prettify.css" rel="stylesheet">
+    <link href="assets/css/christmas.css" rel="stylesheet">
     
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
