--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -148,6 +148,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <script src="assets/js/jquery.js"></script>
+    <script src="../js/main.js"></script>
     <script src="assets/js/prettify.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/application.js"></script>
