Added examples style

--- a/doc/custom_theme/css/style.css
+++ b/doc/custom_theme/css/style.css
@@ -77,6 +77,39 @@ h1 {
     color: #003478;
 }
 
+example {
+	display: block;
+	position: relative;
+    margin-top: 15px;
+    margin-bottom: -15px;
+    padding: 39px 19px 14px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+example:after {
+    content: "Example";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    padding: 3px 7px;
+    font-size: 12px;
+    font-weight: bold;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    color: #9da0a4;
+    -webkit-border-radius: 4px 0 4px 0;
+    -moz-border-radius: 4px 0 4px 0;
+    border-radius: 4px 0 4px 0;
+}
+
+pre {
+	background-color: #f5f5f5;
+}
+
 @media (min-width: 992px) {
 	.bs-sidebar.affix {
 		top: 63px;
