Link to readthedocs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,13 +111,13 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li {% if page.architecture %}class="active"{% endif %}>
-                    <a href="./architecture.html">Architecture</a>
+                    <a href="http://licode.readthedocs.io/en/master/">Architecture</a>
                   </li>
                   <li {% if page.clientapi %}class="active"{% endif %}>
-                    <a href="./client-api.html">Client API</a>
+                    <a href="http://licode.readthedocs.io/en/master/client_api/">Client API</a>
                   </li>
                   <li {% if page.serverapi %}class="active"{% endif %}>
-                    <a href="./server-api.html">Server API</a>
+                    <a href="http://licode.readthedocs.io/en/master/server_api/">Server API</a>
                   </li>
                 </ul>
               </li>
