--- a/doc/custom_theme/css/style.css
+++ b/doc/custom_theme/css/style.css
@@ -37,6 +37,20 @@ body {
 	border-radius: 6px;
 }
 
+.navbar-collapse {
+    max-height: 404px;
+}
+
+.navbar .github-logo {
+    float: right;
+    margin-top: 9px;
+    margin-right: 5px;
+}
+
+.navbar .github-logo img {
+    width:36px; height: 34px;
+}
+
 .bs-sidebar .nav > li.search_nav > a {
     padding-left: 20px;
 }
@@ -108,6 +122,26 @@ example:after {
 
 pre {
 	background-color: #f5f5f5;
+}
+
+.visible-desktop {
+    display: inherit !important;
+}
+
+.hidden-desktop {
+    display: none !important;
+}
+
+@media (max-width: 767px) {
+    .hidden-desktop {
+        display: inherit !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .visible-desktop {
+        display: none !important;
+    }
 }
 
 @media (min-width: 992px) {
