--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,13 +106,13 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">API Documentation<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li {% if page.architecture %}class="active"{% endif %}>
-                    <a href="http://licode.readthedocs.io/en/master/">Architecture</a>
+                    <a href="http://licode.readthedocs.io/en/stable/">Architecture</a>
                   </li>
                   <li {% if page.clientapi %}class="active"{% endif %}>
-                    <a href="http://licode.readthedocs.io/en/master/client_api/">Client API</a>
+                    <a href="http://licode.readthedocs.io/en/stable/client_api/">Client API</a>
                   </li>
                   <li {% if page.serverapi %}class="active"{% endif %}>
-                    <a href="http://licode.readthedocs.io/en/master/server_api/">Server API</a>
+                    <a href="http://licode.readthedocs.io/en/stable/server_api/">Server API</a>
                   </li>
                 </ul>
               </li>
@@ -121,10 +121,10 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Installation<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li {% if page.clientapi %}class="active"{% endif %}>
-                    <a href="http://licode.readthedocs.io/en/master/docker/">Docker</a>
+                    <a href="http://licode.readthedocs.io/en/stable/docker/">Docker</a>
                   </li>
                   <li {% if page.serverapi %}class="active"{% endif %}>
-                    <a href="http://licode.readthedocs.io/en/master/from_source/">From Source</a>
+                    <a href="http://licode.readthedocs.io/en/stable/from_source/">From Source</a>
                   </li>
                 </ul>
               </li>
