--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,7 +116,10 @@
                   </li>
                 </ul>
               </li>
-
+              <li {% if page.install %}class="active"{% endif %}>
+                 <a href="./install.html">Installation</a>
+              </li>
+<!-- 
               <li class="dropdown {% if page.gettingstarted or page.install or page.docker or page.from_source %} active {% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Installation<b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -128,7 +131,7 @@
                   </li>
                 </ul>
               </li>
-
+ -->
               <li {% if page.try %}class="active"{% endif %}>
                 <a href="http://chotis2.dit.upm.es">Try it!</a>
               </li>
