--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,7 +106,7 @@
                  <a href="./install.html">Installation</a>
               </li>
               <li class="dropdown {% if page.gettingstarted or page.architecture or page.clientapi or page.serverapi %} active {% endif %}">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">API Documentation<b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li {% if page.architecture %}class="active"{% endif %}>
                     <a href="http://licode.readthedocs.io/en/stable/">Architecture</a>
