--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,11 +102,8 @@
               <li {% if page.community %}class="active"{% endif %}>
                 <a href="./community.html">Community</a>
               </li>
-               <li {% if page.install %}class="active"{% endif %}>
-                 <a href="./install.html">Installation</a>
-              </li>
               <li class="dropdown {% if page.gettingstarted or page.architecture or page.clientapi or page.serverapi %} active {% endif %}">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation<b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">API Documentation<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li {% if page.architecture %}class="active"{% endif %}>
                     <a href="http://licode.readthedocs.io/en/stable/">Architecture</a>
@@ -119,8 +116,6 @@
                   </li>
                 </ul>
               </li>
-              
-<!-- 
               <li class="dropdown {% if page.gettingstarted or page.install or page.docker or page.from_source %} active {% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Installation<b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -132,7 +127,6 @@
                   </li>
                 </ul>
               </li>
- -->
               <li {% if page.try %}class="active"{% endif %}>
                 <a href="http://chotis2.dit.upm.es">Try it!</a>
               </li>
